preserving history; other stuff

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     <td>726&nbsp;Broadway, room&nbsp;939</td></tr>
 <tr><th rowspan="3">instructor</th>
     <td>Nitya&nbsp;Doddamane</td>
-    <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@</span></td>
+    <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@dmaytin</span></td>
     <td>726&nbsp;Broadway, room&nbsp;YYY</td></tr>
 <tr><th>admin</th>
     <td>William&nbsp;LePage</td>
