--- a/www/index.html
+++ b/www/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <div id="container">
-<p class="noindent"><a href="http://cosmo.nyu.edu/hogg/physics1/">
-<tt>http://cosmo.nyu.edu/hogg/physics1/</tt></a></p>
-<p class="noindent"><i>hashtag:</i> <b><a href="https://twitter.com/hashtag/nyuphysics1">#nyuphysics1</a></b></p>
+<p class="noindent"><a href="http://cosmo.nyu.edu/hogg/obsast/">
+<tt>http://cosmo.nyu.edu/hogg/obsast/</tt></a></p>
+<p class="noindent"><i>hashtag:</i> <b><a href="https://twitter.com/hashtag/nyuObsAst">#nyuObsAst</a></b></p>
 
 <h1>NYU Observational Astronomy</h1>
 
