--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
     <td><a href="http://cosmo.nyu.edu/hogg/">David&nbsp;W.&nbsp;Hogg</a></td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@ggoh.divad</span></td>
     <td>726&nbsp;Broadway, room&nbsp;939</td></tr>
-<tr><th rowspan="3">instructor</th>
+<tr><th>instructor</th>
     <td>Nitya&nbsp;Doddamane</td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@dmaytin</span></td>
     <td>726&nbsp;Broadway, room&nbsp;YYY</td></tr>
@@ -55,11 +55,13 @@
 
 <h2>Schedule</h2>
 
-<p class="noindent">The following table is subject to change; please
+<p class="noindent">Do the reading before each lecture.
+The following table is subject to change; please
 check back here frequently.</p>
 <table>
 <tr><th>start of week</th>
     <th>lecture subjects</th>
+    <th>reading</th>
     </tr>
 </table>
 
