--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 
 <h2>CAS Bulletin Description</h2>
 
-<p class="noindent"><i>PHYS-UA 13  Prerequisite: The Universe: Its Nature and History (PHYS-UA 7) or higher, or permission of the instructor for nonscience majors and minors; no prerequisite for science majors and minors or those who have satisfied the Core  Natural Science I requirement. Lecture and laboratory. Offered every year. 4 points.</i>
+<p class="noindent"><i><b>PHYS-UA 13</b>  Prerequisite: The Universe: Its Nature and History (PHYS-UA 7) or higher, or permission of the instructor for nonscience majors and minors; no prerequisite for science majors and minors or those who have satisfied the Core  Natural Science I requirement. Lecture and laboratory. Offered every year. 4 points.</i></p>
 <p>Introduction to the theory and practice of technical amateur astronomy. The approach is hands-on, with weekly evening laboratory/observing sessions. Topics include astronomical coordinate systems, optics, how to use a telescope, and the phenomena that can be seen in the urban night sky. Observing sessions involve the use of eight-inch telescopes.</p>
 
 <h2>Staff</h2>
@@ -34,11 +34,11 @@
 <tr><th>professor</th>
     <td><a href="http://cosmo.nyu.edu/hogg/">David&nbsp;W.&nbsp;Hogg</a></td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@ggoh.divad</span></td>
-    <td>726&nbsp;Broadway, room&nbsp;939</td></tr>
+    <td>726&nbsp;Broadway, 939</td></tr>
 <tr><th>instructor</th>
     <td>Nitya&nbsp;Doddamane</td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@dmaytin</span></td>
-    <td>726&nbsp;Broadway, room&nbsp;YYY</td></tr>
+    <td>726&nbsp;Broadway, YYY</td></tr>
 <tr><th>admin</th>
     <td>William&nbsp;LePage</td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@egapel</span></td>
@@ -47,11 +47,42 @@
 
 <h2>Aims and scope</h2>
 
-<h2>Book and materials</h2>
+<p class="noindent">This course will teach you how to observe the sky carefully
+with your naked eye, binoculars, and a small telescope. You will learn
+the basics of observable lunar and planetary properties, and the
+basics of astronomical coordinates and observations. The goal is for
+you to be able to understand and describe what you see in the sky at
+night, and to be able to use charts and coordinates to predict it.</p>
+
+<h2>Reading</h2>
+<ul>
+ <li>Kaler,
+  <i>The Ever-Changing Sky</i>
+     (Cambridge)</li>
+ <li>Pasachoff,
+  <i>A Field Guide to the Stars and Planets</i> 4 ed
+     (Houghton Mifflin)</li>
+ <li>
+  <i>Edmund Mag 5 Star Atlas</i>
+     (out of print; will be handed out in class)</li>
+</ul>
 
 <h2>Laboratory sessions</h2>
 
 <h2>Evaluation</h2>
+
+<h2>Rules</h2>
+<ul>
+ <li>This class may not be used to satisfy a science requirement.</li>
+ <li>You must attend the lab for which you are registered; no swaps
+     are allowed.</li>
+ <li>You <b>must arrive for labs on-time</b>, because students are not
+     permitted to travel to the observatory unaccompanied.</li>
+ <li>If you miss a lab without a doctor's note, you will get no credit
+     for that lab; if you miss more than three <i>with or without
+     notes</i>, you cannot pass the class; you will get an <i>F</i> or
+     an <i>Incomplete</i>. There are no make-up labs.</li>
+</ul>
 
 <h2>Schedule</h2>
 
@@ -63,6 +94,97 @@ check back here frequently.</p>
     <th>lecture subjects</th>
     <th>reading</th>
     </tr>
+ <tr>
+  <td>2017-01-23</td>
+  <td>view from a moving planet</td>
+  <td></td>
+ </tr>
+ <tr>
+  <td>2017-01-30</td>
+  <td>constellations and angles</td>
+  <td>Kaler&nbsp;4.1&ndash;4.8,
+      Pasachoff&nbsp;1&ndash;26, 32&ndash;38, 46&ndash;50</td>
+ </tr>
+ <tr>
+  <td>2017-02-06</td>
+  <td>celestial coordinates</td>
+  <td>Kaler&nbsp;1.6&ndash;1.10, 2.1&ndash;2.4,
+      Pasachoff&nbsp;495&ndash;498,
+      Atlas&nbsp;1&ndash;7</td>
+ </tr>
+ <tr>
+  <td>2017-02-13</td>
+  <td>the changing sky</td>
+  <td>Kaler&nbsp;3.1&ndash;3.13,
+      Pasachoff&nbsp;499</td>
+ </tr>
+ <tr>
+  <td>2017-02-20</td>
+  <td colspan="4"><i>President's Day holiday&mdash;no lecture or labs this week</i></td>
+ </tr>
+ <tr>
+  <td>2017-02-27</td>
+  <td>Moon</td>
+  <td>Kaler&nbsp;9.1&ndash;9.5,
+      Pasachoff&nbsp;348&ndash;359,
+      Atlas&nbsp;34&ndash;35</td>
+ </tr>
+ <tr>
+  <td>2017-03-06</td>
+  <td>planetary motions</td>
+  <td>Kaler&nbsp;11.1&ndash;11.7,
+      Pasachoff&nbsp;385&ndash;395, 402&ndash;403</td>
+ </tr>
+ <tr>
+  <td>2017-03-13</td>
+  <td colspan="4"><i>spring recess&mdash;no lecture or labs this week</i></td>
+ </tr>
+ <tr>
+  <td>2017-03-20</td>
+  <td>planets</td>
+  <td>Kaler&nbsp;11.17, 12.1,
+      Pasachoff&nbsp;418&ndash;454</td>
+ </tr>
+ <tr>
+  <td>2017-03-27</td>
+  <td>stars 1</td>
+  <td>Kaler&nbsp;4.10,
+      Pasachoff&nbsp;144&ndash;149</td>
+ </tr>
+ <tr>
+  <td>2017-04-03</td>
+  <td>stars 2</td>
+  <td>Kaler&nbsp;4.11&ndash;4.15,
+      Pasachoff&nbsp;194&ndash;204</td>
+ </tr>
+ <tr>
+  <td>2017-04-10</td>
+  <td>nebulae and galaxies</td>
+  <td>Kaler&nbsp;4.16&ndash;4.17,
+      Pasachoff&nbsp;149&ndash;185</td>
+ </tr>
+ <tr>
+  <td>2017-04-17</td>
+  <td>Sun and eclipses</td>
+  <td>Kaler&nbsp;10.6&ndash;10.12,
+      Pasachoff&nbsp;359&ndash;363, 474&ndash;487</td>
+ </tr>
+ <tr>
+  <td>2017-04-24</td>
+  <td>optics and telescopes</td>
+  <td>Kaler&nbsp;13.8&ndash;13.16, 13.21&ndash;13.23,
+      Pasachoff&nbsp;503&ndash;508</td>
+ </tr>
+ <tr>
+  <td>2017-05-01</td>
+  <td>comets and meteors</td>
+  <td>Kaler&nbsp;12.1&ndash;12.5,
+      Pasachoff&nbsp;455&ndash;473</td>
+ </tr>
+ <tr>
+  <td>2017-05-TBA</td>
+  <td colspan="4"><i>final exam TBA at TBA in TBA</i></td>
+ </tr>
 </table>
 
 <p class="footnote">This page is coded in <a
