--- a/www/index.html
+++ b/www/index.html
@@ -16,16 +16,13 @@
 <p class="noindent"><i>hashtag:</i> <b><a href="https://twitter.com/hashtag/nyuObsAst">#nyuObsAst</a></b></p>
 
 <h1>NYU Observational Astronomy</h1>
-
 <p class="noindent"><i>This syllabus is for the <b>Spring 2017 semester</b>.</i></p>
 
 <h2>CAS Bulletin Description</h2>
-
-<p class="noindent"><i><b>PHYS-UA 13</b>  Prerequisite: The Universe: Its Nature and History (PHYS-UA 7) or higher, or permission of the instructor for nonscience majors and minors; no prerequisite for science majors and minors or those who have satisfied the Core  Natural Science I requirement. Lecture and laboratory. Offered every year. 4 points.</i></p>
-<p>Introduction to the theory and practice of technical amateur astronomy. The approach is hands-on, with weekly evening laboratory/observing sessions. Topics include astronomical coordinate systems, optics, how to use a telescope, and the phenomena that can be seen in the urban night sky. Observing sessions involve the use of eight-inch telescopes.</p>
+<p class="noindent"><i><b>PHYS-UA 13</b>  Prerequisite: The Universe: Its Nature and History (PHYS-UA 7) or higher, or permission of the instructor for nonscience majors and minors; no prerequisite for science majors and minors or those who have satisfied the Core  Natural Science I requirement. Lecture and laboratory. Offered every year. 4 points.</i><br/>
+Introduction to the theory and practice of technical amateur astronomy. The approach is hands-on, with weekly evening laboratory/observing sessions. Topics include astronomical coordinate systems, optics, how to use a telescope, and the phenomena that can be seen in the urban night sky. Observing sessions involve the use of eight-inch telescopes.</p>
 
 <h2>Staff</h2>
-
 <table>
 <tr><td></td>
     <th>name</th>
@@ -46,7 +43,6 @@
 </table>
 
 <h2>Aims and scope</h2>
-
 <p class="noindent">This course will teach you how to observe the sky carefully
 with your naked eye, binoculars, and a small telescope. You will learn
 the basics of observable lunar and planetary properties, and the
@@ -60,16 +56,28 @@ night, and to be able to use charts and coordinates to predict it.</p>
   <i>The Ever-Changing Sky</i>
      (Cambridge)</li>
  <li>Pasachoff,
-  <i>A Field Guide to the Stars and Planets</i> 4 ed
+  <i>Field Guide to the Stars and Planets</i>
      (Houghton Mifflin)</li>
  <li>
-  <i>Edmund Mag 5 Star Atlas</i>
+  <i>Mag 5 Star Atlas</i>
      (out of print; will be handed out in class)</li>
 </ul>
-
-<h2>Laboratory sessions</h2>
+<p class="noindent">There will be reading each week. You are expected
+to have completed the reading before coming to class, and also
+(sometimes) answered a few questions about that reading (which will be
+due at the beginning of class).</p>
 
 <h2>Evaluation</h2>
+<table>
+  <tr><th>component</th>        <th>percentage</th></tr>
+  <tr><td>labs</td>             <th>50</th></tr>
+  <tr><td>reading questions</td><th>10</th></tr>
+  <tr><td>midterm exam</td>     <th>10</th></tr>
+  <tr><td>final exam</td>       <th>30</th></tr>
+  <tr><th>total</th>            <th>100</th></tr>
+</table>
+<p class="noindent">The &ldquo;labs&rdquo; number will be the mean of
+your lab scores, with the lowest score dropped.</p>
 
 <h2>Rules</h2>
 <ul>
@@ -78,6 +86,8 @@ night, and to be able to use charts and coordinates to predict it.</p>
      are allowed.</li>
  <li>You <b>must arrive for labs on-time</b>, because students are not
      permitted to travel to the observatory unaccompanied.</li>
+ <li>You <b>must dress warmly</b> for the labs. It is colder on the
+     roof than it is on the street!
  <li>If you miss a lab without a doctor's note, you will get no credit
      for that lab; if you miss more than three <i>with or without
      notes</i>, you cannot pass the class; you will get an <i>F</i> or
@@ -85,7 +95,6 @@ night, and to be able to use charts and coordinates to predict it.</p>
 </ul>
 
 <h2>Schedule</h2>
-
 <p class="noindent">Do the reading before each lecture.
 The following table is subject to change; please
 check back here frequently.</p>
