--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@ Introduction to the theory and practice of technical amateur astronomy. The appr
 <tr><th>instructor</th>
     <td>Nitya&nbsp;Doddamane</td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@dmaytin</span></td>
-    <td>726&nbsp;Broadway, YYY</td></tr>
+    <td>726&nbsp;Broadway, 943</td></tr>
 <tr><th>admin</th>
     <td>William&nbsp;LePage</td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@egapel</span></td>
