--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
   <meta name="robots" content="index,nofollow" />
   <meta name="Pragma" content="no-cache" />
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="physics.css" />
+  <link rel="stylesheet" type="text/css" href="obsast.css" />
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=EB+Garamond" />
   <title>NYU Observational Astronomy Spring 2017</title>
 </head>
@@ -27,7 +27,7 @@ Introduction to the theory and practice of technical amateur astronomy. The appr
 <tr><td></td>
     <th>name</th>
     <th>contact</th>
-    <th>office</th>
+    <th>office</th></tr>
 <tr><th>professor</th>
     <td><a href="http://cosmo.nyu.edu/hogg/">David&nbsp;W.&nbsp;Hogg</a></td>
     <td><span style="unicode-bidi:bidi-override; direction: rtl;">ude.uyn@ggoh.divad</span></td>
@@ -70,11 +70,11 @@ due at the beginning of class).</p>
 <h2>Evaluation</h2>
 <table>
   <tr><th>component</th>        <th>percentage</th></tr>
-  <tr><td>labs</td>             <th>50</th></tr>
-  <tr><td>reading questions</td><th>10</th></tr>
-  <tr><td>midterm exam</td>     <th>10</th></tr>
-  <tr><td>final exam</td>       <th>30</th></tr>
-  <tr><th>total</th>            <th>100</th></tr>
+  <tr><td>labs</td>             <td align="right">50</td></tr>
+  <tr><td>reading questions</td><td align="right">10</td></tr>
+  <tr><td>midterm exam</td>     <td align="right">10</td></tr>
+  <tr><td>final exam</td>       <td align="right">30</td></tr>
+  <tr><th>total</th>            <td align="right">100</td></tr>
 </table>
 <p class="noindent">The &ldquo;labs&rdquo; number will be the mean of
 your lab scores, with the lowest score dropped.</p>
@@ -87,7 +87,7 @@ your lab scores, with the lowest score dropped.</p>
  <li>You <b>must arrive for labs on-time</b>, because students are not
      permitted to travel to the observatory unaccompanied.</li>
  <li>You <b>must dress warmly</b> for the labs. It is colder on the
-     roof than it is on the street!
+     roof than it is on the street!</li>
  <li>If you miss a lab without a doctor's note, you will get no credit
      for that lab; if you miss more than three <i>with or without
      notes</i>, you cannot pass the class; you will get an <i>F</i> or
@@ -99,7 +99,7 @@ your lab scores, with the lowest score dropped.</p>
 The following table is subject to change; please
 check back here frequently.</p>
 <table>
-<tr><th>start of week</th>
+<tr><th>Monday</th>
     <th>lecture subjects</th>
     <th>reading</th>
     </tr>
