no more galaxies

--- a/www/index.html
+++ b/www/index.html
@@ -168,9 +168,9 @@ check back here frequently.</p>
  </tr>
  <tr>
   <td>2017-04-10</td>
-  <td>nebulae and galaxies</td>
-  <td>Kaler&nbsp;4.16&ndash;4.17,
-      Pasachoff&nbsp;149&ndash;185</td>
+  <td>comets and meteors</td>
+  <td>Kaler&nbsp;12.1&ndash;12.5,
+      Pasachoff&nbsp;455&ndash;473</td>
  </tr>
  <tr>
   <td>2017-04-17</td>
@@ -180,15 +180,13 @@ check back here frequently.</p>
  </tr>
  <tr>
   <td>2017-04-24</td>
-  <td>optics and telescopes</td>
+  <td>optics and telescopes 1</td>
   <td>Kaler&nbsp;13.8&ndash;13.16, 13.21&ndash;13.23,
       Pasachoff&nbsp;503&ndash;508</td>
  </tr>
  <tr>
   <td>2017-05-01</td>
-  <td>comets and meteors</td>
-  <td>Kaler&nbsp;12.1&ndash;12.5,
-      Pasachoff&nbsp;455&ndash;473</td>
+  <td>optics and telescopes 2</td>
  </tr>
  <tr>
   <td>2017-05-TBA</td>
