--- a/www/index.html
+++ b/www/index.html
@@ -168,15 +168,15 @@ check back here frequently.</p>
  </tr>
  <tr>
   <td>2017-04-10</td>
-  <td>comets and meteors</td>
-  <td>Kaler&nbsp;12.1&ndash;12.5,
-      Pasachoff&nbsp;455&ndash;473</td>
+  <td>eclipses</td>
+  <td>Kaler&nbsp;10.6&ndash;10.12,
+      Pasachoff&nbsp;359&ndash;363, 474&ndash;487</td>
  </tr>
  <tr>
   <td>2017-04-17</td>
-  <td>Sun and eclipses</td>
-  <td>Kaler&nbsp;10.6&ndash;10.12,
-      Pasachoff&nbsp;359&ndash;363, 474&ndash;487</td>
+  <td>comets and meteors</td>
+  <td>Kaler&nbsp;12.1&ndash;12.5,
+      Pasachoff&nbsp;455&ndash;473</td>
  </tr>
  <tr>
   <td>2017-04-24</td>
