--- a/www/index.html
+++ b/www/index.html
@@ -185,11 +185,11 @@ check back here frequently.</p>
  </tr>
  <tr>
   <td>2017-05-01</td>
-  <td>optics and telescopes 2</td>
+  <td>planets around other stars</td>
  </tr>
  <tr>
   <td>2017-05-TBA</td>
-  <td colspan="4"><i>final exam TBA at TBA in TBA</i></td>
+  <td colspan="4"><i>take-home final exam due TBA</i></td>
  </tr>
 </table>
 
