--- a/www/index.html
+++ b/www/index.html
@@ -179,7 +179,7 @@ check back here frequently.</p>
  </tr>
  <tr>
   <td>2017-04-24</td>
-  <td>optics and telescopes 1</td>
+  <td>optics and telescopes</td>
   <td>Kaler&nbsp;13.8&ndash;13.16, 13.21&ndash;13.23,
       Pasachoff&nbsp;503&ndash;508</td>
  </tr>
