--- a/www/index.html
+++ b/www/index.html
@@ -188,8 +188,12 @@ check back here frequently.</p>
   <td>planets around other stars</td>
  </tr>
  <tr>
-  <td>2017-05-TBA</td>
-  <td colspan="4"><i>take-home final exam due TBA</i></td>
+  <td>2017-05-08</td>
+  <td>the history and future of the Universe</td>
+ </tr>
+ <tr>
+  <td>2017-05-15</td>
+  <td colspan="4"><i>take-home final exam due by 17:00 today at Prof Hogg's office.</i></td>
  </tr>
 </table>
 
